[package]
name        = "neobirth"
description = "Acid house synthesizer powered by ZenGarden and PureData"
version     = "0.1.0"
authors     = ["Tony Arcieri <bascule@gmail.com>"]
license     = "Apache-2.0"
homepage    = "https://neobirth.org"
repository  = "https://github.com/NeoBirth/ZenGarden.rs"
readme      = "README.md"
edition     = "2018"

[dependencies]
zengarden = "0"
